css/style.css
*{
    margin:0;
    padding: 0;
    color: #4a4a4a;
}

body{
    width: 1024px;
    margin:auto;
    margin-bottom: 104px;
}

hr{
    margin: 24px 0;
    color: #b5b5b5;
}

h1,h2,h3{
    font-family: 'Montserrat', sans-serif;
    
}

h4,h5,h6,p{
    font-family: 'Roboto', sans-serif;
}

h1{
    font-size: 80px;
    letter-spacing: -3;
    line-height: 80px;
}

h3{
    font-size: 24px;
    letter-spacing: 0;
    line-height: normal;
}

h4{
    font-size: 20px;
    letter-spacing: 0;
    line-height: normal;
}
h5{
   font-size: 16px;
   line-height: 1.5; 
   text-transform: uppercase;
   color: #797979;
}

p{
    font-size: 20px;
    margin-bottom: 12px;
}


/* Section Globals
#################*/

section{
    margin-top: 40px;
    display: flex;
}


.section_title{
    max-width: 87px;
}

.section_data{
    margin-left: 260px;
}

/* Main Data
#################*/
.main_data{
    flex-direction: column;
    margin-top: 270px;
    margin-bottom: 104px;
}
.site_name{
    max-width: 375px;
}

h5.site_details{
    text-transform: none;
    padding-top: 16px;
  
}

.site_details{
    max-width: 375px;
}

.main_data span{
    color: #797979;
}


/* About Section
#################*/

.about{

}


/* Technical Skills
#################*/
.technical_skills{
   
}

/* personal_details
#################*/
.personal_details{
}

/* websites_profiles
#################*/
.websites_profiles{
  
}

/* experience
#################*/
.experience{
   
}
 /* Education 
 ##################*/
 .education{
    
 }


.education div,.experience div{
    margin-bottom: 32px;
}

.education div,.experience div > :last-child {
     margin-bottom: 0 !important;
    }


/* Medium devices (landscape tablets, 1024px and down) */
@media only screen and (max-width: 1024px) {
    body{
        margin:0 40px;
    }

    section{
        flex-direction: column;
    }

    .section_title{
        max-width: auto;
    }
    
    .section_data{
        margin-left: 0px;
        margin-top: 16px;
    }
} 

 /* Extra small devices (phones, 420px and down) */
 @media only screen and (max-width: 420px) {
    body{
        margin:0 24px;
    }
    .section{
        flex-direction: column;
    }

    .section_title{
        max-width: auto;
    }
    
    .section_data{
        margin-left: 0px;
        margin-top: 16px;
    }

}
 

